Updated Sample to use new build, updated git ignore rules so that no unnecessary files are included in the commits

--- a/samples/free/index.html
+++ b/samples/free/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <script src="../../src/built/forp.min.js"></script>
+    <script src="../../src/built/consolas/forp.min.js"></script>
     <script>
     (new forp.Controller())
         .setStack({
